--- a/ui/package.json
+++ b/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sprevio-frontend",
+  "name": "ui",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -47,6 +47,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.8",
     "input-otp": "^1.2.4",
+    "lucia": "^3.2.0",
     "lucide-react": "^0.427.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
