--- a/ui/package.json
+++ b/ui/package.json
@@ -72,6 +72,8 @@
     "@storybook/react": "^8.2.8",
     "@storybook/react-vite": "^8.2.8",
     "@storybook/test": "^8.2.8",
+    "@tanstack/router-devtools": "^1.47.1",
+    "@tanstack/router-plugin": "^1.47.0",
     "@tauri-apps/cli": "^1.6.0",
     "@types/node": "^22.2.0",
     "@types/react": "^18.3.3",
