--- a/ui/package.json
+++ b/ui/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@lucia-auth/adapter-sqlite": "^3.0.2",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -42,12 +43,15 @@
     "@radix-ui/react-tooltip": "^1.1.2",
     "@storybook/addon-actions": "^8.2.8",
     "@tauri-apps/api": "^1.6.0",
+    "@types/bun": "^1.1.6",
+    "@types/js-cookie": "^3.0.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.8",
     "input-otp": "^1.2.4",
+    "js-cookie": "^3.0.5",
     "lucia": "^3.2.0",
     "lucide-react": "^0.427.0",
     "next-themes": "^0.3.0",
