--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ members = [ "crates/database", "crates/server",
 [workspace.dependencies]
 sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-native-tls", "chrono", "migrate"] }
 tokio = { version = "1", features = ["full"] }
-chrono = "0.4"
+chrono = {version = "0.4", features = ["serde"]}
 serde_json = "1.0"
 anyhow = "1.0"
+axum = { version = "0.7.5", features = [] }
+serde = { version = "1.0.204" , features = ["derive"]}
+tracing-subscriber = "0.3.18"
