--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -4,3 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+tokio = {workspace = true}
+anyhow = {workspace = true}
+axum = { workspace= true }
+serde = { workspace = true}
+database = {path = "../database"}
+tracing-subscriber = { workspace = true}
+sqlx = { workspace = true }
+chrono = { workspace = true }
+serde_json = { workspace = true }
