fix :make signup work

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 resolver = "2"
 members = [ "crates/database", "crates/server",
-"crates/src-tauri"]
+"ui/src-tauri"]
 
 [workspace.dependencies]
 sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-native-tls", "chrono", "migrate"] }
@@ -12,3 +12,5 @@ anyhow = "1.0"
 axum = { version = "0.7.5", features = [] }
 serde = { version = "1.0.204" , features = ["derive"]}
 tracing-subscriber = "0.3.18"
+tower = "0.4.13"
+tower-http = "0.5.2"
