--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -13,3 +13,5 @@ tracing-subscriber = { workspace = true}
 sqlx = { workspace = true }
 chrono = { workspace = true }
 serde_json = { workspace = true }
+tower = { workspace = true }
+tower-http = { workspace = true , features = ["cors"]}
