--- a/ui/package.json
+++ b/ui/package.json
@@ -53,6 +53,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.8",
+    "immer": "^10.1.1",
     "input-otp": "^1.2.4",
     "js-cookie": "^3.0.5",
     "lucia": "^3.2.0",
@@ -68,7 +69,8 @@
     "tailwindcss-animate": "^1.0.7",
     "ui": ".",
     "vaul": "^0.9.1",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
