--- a/ui/package.json
+++ b/ui/package.json
@@ -46,6 +46,18 @@
     "@tanstack/react-query": "^5.51.23",
     "@tanstack/react-router": "^1.47.1",
     "@tauri-apps/api": "^1.6.0",
+    "@tiptap/extension-code-block-lowlight": "^2.6.1",
+    "@tiptap/extension-color": "^2.6.0",
+    "@tiptap/extension-document": "^2.6.1",
+    "@tiptap/extension-highlight": "^2.6.0",
+    "@tiptap/extension-list-item": "^2.6.0",
+    "@tiptap/extension-paragraph": "^2.6.1",
+    "@tiptap/extension-text": "^2.6.1",
+    "@tiptap/extension-text-style": "^2.6.0",
+    "@tiptap/extension-typography": "^2.6.0",
+    "@tiptap/pm": "^2.6.0",
+    "@tiptap/react": "^2.6.0",
+    "@tiptap/starter-kit": "^2.6.0",
     "@types/bun": "^1.1.6",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.7.3",
@@ -54,9 +66,11 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.8",
+    "highlight.js": "^11.10.0",
     "immer": "^10.1.1",
     "input-otp": "^1.2.4",
     "js-cookie": "^3.0.5",
+    "lowlight": "^3.1.0",
     "lucia": "^3.2.0",
     "lucide-react": "^0.427.0",
     "next-themes": "^0.3.0",
