--- a/ui/package.json
+++ b/ui/package.json
@@ -67,6 +67,9 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.8",
     "highlight.js": "^11.10.0",
+    "i18next": "^23.12.3",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.5.2",
     "immer": "^10.1.1",
     "input-otp": "^1.2.4",
     "js-cookie": "^3.0.5",
@@ -78,6 +81,7 @@
     "react-day-picker": "^9.0.8",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
+    "react-i18next": "^15.0.1",
     "react-resizable-panels": "^2.0.23",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
