--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,13 @@ sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-native-tls", "chr
 tokio = { version = "1", features = ["full"] }
 chrono = {version = "0.4", features = ["serde"]}
 serde_json = "1.0"
-anyhow = "1.0"
 axum = { version = "0.7.5", features = [] }
 serde = { version = "1.0.204" , features = ["derive"]}
 tracing-subscriber = "0.3.18"
 tower = "0.4.13"
 tower-http = "0.5.2"
+async-graphql = { version = "7.0.6", features = ["playground", "log"] }
+async-graphql-axum = "7.0.7"
+log = "0.4"
+anyhow = "1.0.86"
+env_logger = "0.11.3"
