--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -5,7 +5,6 @@ edition = "2021"
 
 [dependencies]
 tokio = {workspace = true}
-anyhow = {workspace = true}
 axum = { workspace= true }
 serde = { workspace = true}
 database = {path = "../database"}
@@ -15,3 +14,8 @@ chrono = { workspace = true }
 serde_json = { workspace = true }
 tower = { workspace = true }
 tower-http = { workspace = true , features = ["cors"]}
+async-graphql = { workspace = true }
+async-graphql-axum = { workspace  = true}
+log = {workspace = true}
+anyhow = {workspace = true}
+env_logger = {workspace = true}
