feat: todo resolver, types package

--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -19,3 +19,4 @@ async-graphql-axum = { workspace  = true}
 log = {workspace = true}
 anyhow = {workspace = true}
 env_logger = {workspace = true}
+types = {path = "../types"}
