--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = [ "crates/database", "crates/server",
+members = [ "crates/database", "crates/server", "crates/types",
 "ui/src-tauri"]
 
 [workspace.dependencies]
