--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -9,12 +9,12 @@ axum = { workspace= true }
 serde = { workspace = true}
 database = {path = "../database"}
 tracing-subscriber = { workspace = true}
-sqlx = { workspace = true }
+sqlx = { workspace = true , features = ["chrono"]}
 chrono = { workspace = true }
 serde_json = { workspace = true }
 tower = { workspace = true }
 tower-http = { workspace = true , features = ["cors"]}
-async-graphql = { workspace = true }
+async-graphql = { workspace = true , features = ["chrono"]}
 async-graphql-axum = { workspace  = true}
 log = {workspace = true}
 anyhow = {workspace = true}
