--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -20,3 +20,4 @@ log = {workspace = true}
 anyhow = {workspace = true}
 env_logger = {workspace = true}
 types = {path = "../types"}
+http = {workspace = true}
