--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -9,7 +9,7 @@ axum = { workspace= true, features = ["macros"]  }
 serde = { workspace = true}
 database = {path = "../database"}
 tracing-subscriber = { workspace = true}
-sqlx = { workspace = true , features = ["chrono"]}
+sqlx = { workspace = true , features = ["sqlite", "runtime-tokio-native-tls", "chrono", "migrate", "macros", "uuid"]}
 chrono = { workspace = true }
 serde_json = { workspace = true }
 tower = { workspace = true }
