4-create-modules-resolver (#5)
* fix: fix creation of todos

* feat: create semester and query single semester

* feat: create and load modules and semesters

* chore: cleanup and code formatting, fixing a auth error

* 6 implement graphql connection in the frontend (#8)

* feat: added apollo client boilerplate to the frontend code

* feat: add client to authenticated route

* feat: semester overview

* prepare: semester overview ui

* chore: refactoring

* chore: refactoring

* more resolvers

* feat: loader stuff

* feat: setup new graphql new library and some config files

* feat: make new graphql work

* feat: update execute function

* feat: loading data in loader route function

* feat: createSemester

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ members = [ "crates/database", "crates/server", "crates/types",
 "ui/src-tauri"]
 
 [workspace.dependencies]
-sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-native-tls", "chrono", "migrate"] }
+sqlx = { version = "0.6.0", features = ["sqlite", "runtime-tokio-native-tls", "chrono", "migrate", "macros", "uuid"] }
 tokio = { version = "1", features = ["full"] }
 chrono = {version = "0.4", features = ["serde"]}
 serde_json = "1.0"
