--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -8,8 +8,8 @@ tokio = {workspace = true}
 axum = { workspace= true, features = ["macros"]  }
 serde = { workspace = true}
 database = {path = "../database"}
-tracing-subscriber = { workspace = true}
-sqlx = { workspace = true , features = ["chrono"]}
+tracing-subscriber = { workspace = true, features = ["env-filter"] }
+sqlx = { workspace = true , features = ["sqlite", "runtime-tokio-native-tls", "chrono", "migrate", "macros", "uuid"]}
 chrono = { workspace = true }
 serde_json = { workspace = true }
 tower = { workspace = true }
@@ -22,3 +22,4 @@ env_logger = {workspace = true}
 types = {path = "../types"}
 http = {workspace = true}
 uuid = {workspace = true, features = [ "v4"]}
+tracing = "0.1.40"
