--- a/ui/package.json
+++ b/ui/package.json
@@ -60,9 +60,11 @@
     "@tiptap/pm": "^2.6.0",
     "@tiptap/react": "^2.6.0",
     "@tiptap/starter-kit": "^2.6.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/bun": "^1.1.6",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.7.3",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
