--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,5 @@ anyhow = "1.0.86"
 env_logger = "0.11.3"
 http = "1.1.0"
 uuid = {version = "1.10.0", features = ["v4"]}
+tracing = "0.1.40"
+dirs = "5.0.1"
