--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -22,4 +22,5 @@ env_logger = {workspace = true}
 types = {path = "../types"}
 http = {workspace = true}
 uuid = {workspace = true, features = [ "v4"]}
-tracing = "0.1.40"
+tracing = { workspace = true }
+dirs = {workspace = true}
