--- a/ui/package.json
+++ b/ui/package.json
@@ -47,6 +47,7 @@
     "@storybook/addon-actions": "^8.2.8",
     "@tanstack/react-query": "^5.51.23",
     "@tanstack/react-router": "^1.47.1",
+    "@tanstack/react-table": "^8.20.5",
     "@tauri-apps/api": "^1.6.0",
     "@tiptap/extension-code-block-lowlight": "^2.6.1",
     "@tiptap/extension-color": "^2.6.0",
