--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -24,3 +24,6 @@ http = {workspace = true}
 uuid = {workspace = true, features = [ "v4"]}
 tracing = { workspace = true }
 dirs = {workspace = true}
+reqwest = {workspace = true}
+regex = {workspace = true}
+scraper = {workspace = true}
