ongoing: lots of black magic

--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -27,3 +27,4 @@ dirs = {workspace = true}
 reqwest = {workspace = true}
 regex = {workspace = true}
 scraper = {workspace = true}
+url = {workspace = true}
