--- a/ui/package.json
+++ b/ui/package.json
@@ -92,6 +92,7 @@
     "react-i18next": "^15.0.1",
     "react-resizable-panels": "^2.0.23",
     "sonner": "^1.5.0",
+    "swapy": "^0.1.2",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
