(feat) drag and drop wow and store even more wow

--- a/ui/package.json
+++ b/ui/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.5",
+    "@hello-pangea/dnd": "^17.0.0",
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.0",
     "@lucia-auth/adapter-sqlite": "^3.0.2",
