--- a/ui/package.json
+++ b/ui/package.json
@@ -84,9 +84,11 @@
     "lowlight": "^3.1.0",
     "lucia": "^3.2.0",
     "lucide-react": "^0.427.0",
+    "moment": "^2.30.1",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
+    "react-big-calendar": "^1.14.1",
     "react-day-picker": "^9.0.8",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.2",
