--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,10 @@
 [workspace]
 resolver = "2"
-members = ["crates/database", "crates/server", "crates/types", "ui/src-tauri"]
+members = ["crates/database", "crates/server", "crates/types", "ui/src-tauri", "crates/migration"]
 
 [workspace.dependencies]
-sqlx = { version = "0.6.0", features = [
-  "sqlite",
-  "runtime-tokio-native-tls",
-  "chrono",
-  "migrate",
-  "macros",
-  "uuid",
-] }
+sea-orm = {version = "1.1.0", features= ["sqlx-sqlite", "runtime-tokio-rustls", "with-chrono", "with-json", "with-uuid", "macros", "debug-print"]}
+sea-orm-migration = "1.1.0"
 tokio = { version = "1", features = ["full"] }
 chrono = { version = "0.4", features = ["serde"] }
 serde_json = "1.0"
