--- a/crates/database/Cargo.toml
+++ b/crates/database/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 sea-orm = {workspace = true}
 sea-orm-migration = {workspace = true }
+async-graphql = { workspace = true}
 tokio = { workspace = true }
 chrono = { workspace = true }
 serde_json = { workspace = true }
