--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,8 @@ members = [
 
 [workspace.dependencies]
 sea-orm = { version = "1.1.0", features = [
-    "sqlx-sqlite",
+    # "sqlx-sqlite",
+    "sqlx-postgres",
     "runtime-tokio-rustls",
     "with-chrono",
     "with-json",
