--- a/crates/migration/Cargo.toml
+++ b/crates/migration/Cargo.toml
@@ -10,12 +10,13 @@ path = "src/lib.rs"
 
 [dependencies]
 async-std = { version = "1", features = ["attributes", "tokio1"] }
-chrono = {workspace = true}
+chrono = { workspace = true }
+sea-orm = { workspace = true }
 
 [dependencies.sea-orm-migration]
 version = "1.1.0"
 features = [
-    "sqlx-sqlite",
+    "sqlx-postgres",
     "runtime-tokio-rustls",
     # Enable at least one `ASYNC_RUNTIME` and `DATABASE_DRIVER` feature if you want to run migration via CLI.
     # View the list of supported features at https://www.sea-ql.org/SeaORM/docs/install-and-config/database-and-async-runtime.
