Migrate to seaorm (#12)
* (chore) migrate to seaorm p1

* feat(seaorm): moved db schema to seaorm

* (chore) add entities and test how it will go with graphql

* (chore) defaults in tables

* (fix) fixed the default dates

* (fix) missing ids etc.

* (fix) add more fixes

* feat(entities, migrations): create Entities and Migrations for the DB

BREAKING CHANGE: dependencies, cli-tools

* feat(migrate calendar endpoints to seaorm): migrate

* feat(todos mutation): migrate todo mutation

* feat(migrate to postgres): migrating to postgresql

* feat(move auth to seaorm): moving all the auth backend code for lucia to seaorm

* feat(database migration): migrated more files to the database

* (feat) finished migrating all files

* (feat): no more error wow

* (feat): it works

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 target
 node_modules
-
 */target
 */node_modules
 .env
@@ -10,3 +9,4 @@ node_modules
 *.idea
 .idea/*
 !.idea/compiler.xml
+crates/migration/test.db
