--- a/crates/database/Cargo.toml
+++ b/crates/database/Cargo.toml
@@ -4,8 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-sqlx = { workspace = true }
+sea-orm = {workspace = true}
+sea-orm-migration = {workspace = true }
+async-graphql = { workspace = true}
 tokio = { workspace = true }
 chrono = { workspace = true }
 serde_json = { workspace = true }
 anyhow = { workspace = true }
+log = {workspace = true}
+migration = {path = "../migration"}
