--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -6,17 +6,11 @@ edition = "2021"
 [dependencies]
 tokio = { workspace = true }
 axum = { workspace = true, features = ["macros"] }
+sea-orm = { workspace = true }
+sea-query = { workspace = true }
 serde = { workspace = true }
 database = { path = "../database" }
 tracing-subscriber = { workspace = true, features = ["env-filter"] }
-sqlx = { workspace = true, features = [
-  "sqlite",
-  "runtime-tokio-native-tls",
-  "chrono",
-  "migrate",
-  "macros",
-  "uuid",
-] }
 chrono = { workspace = true }
 serde_json = { workspace = true }
 tower = { workspace = true }
