--- a/ui/package.json
+++ b/ui/package.json
@@ -51,7 +51,8 @@
 		"@tanstack/react-query": "^5.51.23",
 		"@tanstack/react-router": "^1.47.1",
 		"@tanstack/react-table": "^8.20.5",
-		"@tauri-apps/api": "^1.6.0",
+		"@tauri-apps/api": "^2.1.1",
+		"@tauri-apps/plugin-fs": "~2",
 		"@tiptap/extension-code-block-lowlight": "^2.6.1",
 		"@tiptap/extension-color": "^2.6.0",
 		"@tiptap/extension-document": "^2.6.1",
