--- a/ui/src-tauri/Cargo.toml
+++ b/ui/src-tauri/Cargo.toml
@@ -21,8 +21,12 @@ tauri-build = { version = "2.0.2", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
-tauri = { version = "2.1.0", features = [] }
+tauri = { version = "2.1.0", features = ["macos-private-api"] }
 tauri-plugin-log = "2.0.0-rc"
+tauri-plugin-fs = "2"
 
 [target."cfg(target_os = \"macos\")".dependencies]
 cocoa = "0.26"
+
+[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
+tauri-plugin-updater = "2"
