--- a/ui/package.json
+++ b/ui/package.json
@@ -53,6 +53,8 @@
 		"@tanstack/react-table": "^8.20.5",
 		"@tauri-apps/api": "^2.1.1",
 		"@tauri-apps/plugin-fs": "~2",
+		"@tauri-apps/plugin-process": "~2",
+		"@tauri-apps/plugin-updater": "~2",
 		"@tiptap/extension-code-block-lowlight": "^2.6.1",
 		"@tiptap/extension-color": "^2.6.0",
 		"@tiptap/extension-document": "^2.6.1",
