--- a/ui/src-tauri/Cargo.toml
+++ b/ui/src-tauri/Cargo.toml
@@ -24,6 +24,7 @@ log = "0.4"
 tauri = { version = "2.1.0", features = ["macos-private-api"] }
 tauri-plugin-log = "2.0.0-rc"
 tauri-plugin-fs = "2"
+tauri-plugin-process = "2"
 
 [target."cfg(target_os = \"macos\")".dependencies]
 cocoa = "0.26"
