--- a/ui/package.json
+++ b/ui/package.json
@@ -48,6 +48,7 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@storybook/addon-actions": "^8.2.8",
+    "@tailwindcss/typography": "^0.5.15",
     "@tanstack/react-query": "^5.51.23",
     "@tanstack/react-router": "^1.47.1",
     "@tanstack/react-table": "^8.20.5",
@@ -55,7 +56,7 @@
     "@tauri-apps/plugin-fs": "~2",
     "@tauri-apps/plugin-process": "~2",
     "@tauri-apps/plugin-updater": "~2",
-    "@tiptap/extension-code-block-lowlight": "^2.6.1",
+    "@tiptap/extension-code-block-lowlight": "^2.11.0",
     "@tiptap/extension-color": "^2.6.0",
     "@tiptap/extension-document": "^2.6.1",
     "@tiptap/extension-highlight": "^2.6.0",
@@ -86,11 +87,12 @@
     "immer": "^10.1.1",
     "input-otp": "^1.2.4",
     "js-cookie": "^3.0.5",
-    "lowlight": "^3.1.0",
+    "lowlight": "^3.3.0",
     "lucia": "^3.2.0",
     "lucide-react": "^0.469.0",
     "moment": "^2.30.1",
     "next-themes": "^0.3.0",
+    "prosemirror-markdown": "^1.13.1",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-big-calendar": "^1.14.1",
