fix (setup): added .env handling

--- a/crates/server/Cargo.toml
+++ b/crates/server/Cargo.toml
@@ -28,3 +28,4 @@ reqwest = { workspace = true }
 regex = { workspace = true }
 scraper = { workspace = true }
 url = { workspace = true }
+dotenv = {workspace = true}
