--- a/ui/components.json
+++ b/ui/components.json
@@ -10,8 +10,12 @@
 		"cssVariables": true,
 		"prefix": ""
 	},
+
 	"aliases": {
 		"components": "@/components",
-		"utils": "@/lib/utils"
+		"utils": "@/lib/utils",
+		"ui": "@/components/ui",
+		"lib": "@/lib",
+		"hooks": "@/hooks"
 	}
 }
